URL-ji naj bodo relativni na osnovnega

--- a/views/komitenti.html
+++ b/views/komitenti.html
@@ -22,5 +22,5 @@
   </table>
 
   <p>
-    <a href="/transakcije/1000/">Transakcije</a>
+    <a href="{{ROOT}}transakcije/1000/">Transakcije</a>
   </p>
