--- a/views/osnova.html
+++ b/views/osnova.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <title>{{naslov}}</title>
-  <link href="/static/style.css" rel="stylesheet">
+  <link href="{{ROOT}}static/style.css" rel="stylesheet">
 </head>
 <body>
   <h2>{{naslov}}</h2>
