Posodobljena aplikacija za uporabo funkcije url

--- a/views/osnova.html
+++ b/views/osnova.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <title>{{naslov}}</title>
-  <link href="{{ROOT}}static/style.css" rel="stylesheet">
+  <link href="{{url('static', filename='style.css')}}" rel="stylesheet">
 </head>
 <body>
   <h2>{{naslov}}</h2>
