--- a/views/transakcije.html
+++ b/views/transakcije.html
@@ -20,6 +20,6 @@
   </table>
 
   <p>
-    <a href="{{ROOT}}">Komitenti</a>
-    <a href="{{ROOT}}dodaj_transakcijo">Dodaj transakcijo</a>
+    <a href="{{url('index')}}">Komitenti</a>
+    <a href="{{url('dodaj_transakcijo')}}">Dodaj transakcijo</a>
   </p>
