--- a/views/dodaj_transakcijo.html
+++ b/views/dodaj_transakcijo.html
@@ -4,7 +4,7 @@
   <p class="opozorilo">{{napaka}}</p>
 %end
 
-  <form action="{{ROOT}}dodaj_transakcijo" method="POST">
+  <form action="{{url('dodaj_transakcijo')}}" method="POST">
     <p>Znesek: <input type="text" name="znesek" value="{{znesek}}"></p>
     <p>Račun: <input type="text" name="racun" value="{{racun}}"></p>
     <p>Opis: <input type="text" name="opis" value="{{opis}}"></p>
